fix z-index of print,share buttons

--- a/app/styles/modules/_m-share-controls.scss
+++ b/app/styles/modules/_m-share-controls.scss
@@ -6,7 +6,7 @@
   position: absolute;
   top: 10px;
   left: 50px;
-  z-index: 1;
+  z-index: 2;
   overflow: visible;
 
   .share-controls-toggle {
